# SlotMap

./: .clang-tidy  .gitignore  .iwyu.imp  AI_OPS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DO_NOT_MODIFY.md  PROJECT_PLAN.md  README.md  SUMMARY.md  TEST_BRANCH_README.md  codex.cli.takeover.txt  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json  docker-bake.hcl
.devcontainer/scripts/: build_remote_images.sh  post_create.sh  resolve_llvm_branches.sh
.github/workflows/: build-devcontainer.yml  devcontainer-lint.yml  hardcoded-guard.yml
benchmarks/: CMakeLists.txt  bench_slotmap.cpp  perf_slotmap.cpp
cmake/toolchains/: clang21.cmake  clang22.cmake  clang_p2996.cmake  gcc14.cmake  gcc15.cmake
config/env/: README.md  devcontainer.env.example  devcontainer.gcc15-clangp2996.env
docs/: AI_AGENT_CONTEXT.md  AUTO_UPDATE_SETUP.md  CRITICAL_FINDINGS.md  CURRENT_WORKFLOW.md  DECISION_MODERN_SCHEDULERS.md  DEVCONTAINER_BRANCH_COMPARISON.md  DEVCONTAINER_VARIANT_OPTIONS.md  DOCKER_IMAGE_OPTIMIZATION_PLAN.md  DYNAMIC_USERNAME_RESOLUTION.md  Doxyfile  HOSTNAME_CONFIGURATION.md  INDEX.md  REFACTORING_ROADMAP.md  SCHEDULER_DOCS_INDEX.md  SCHEDULER_IMPLEMENTATION.md  SCHEDULER_RESEARCH.md  SSH_KEY_AUDIT.md  SSH_KEY_SAFETY_AUDIT.md  SSH_KEY_SYNC_PLAN.md  WORKFLOW_DIAGRAMS.md  ai_agent_action_plan.md  ai_devcontainer_workflow.md  ai_mutagen_runbook.md  cmake_workflow.md  devcontainer-image-optimization-plan.md  devcontainer-ssh-docker-context.md  devcontainer-tools.md  mrdocs.yml  mutagen-ai-hand-off.md  mutagen-validation.md  mutagen_sync.md  remote-devcontainer.md  remote-docker-context.md  review_report.md
docs/Architecture/: LookupStrategies.md  MemoryLayout.md  Overview.md
docs/Diagrams/: devcontainer-build-flow.mmd  docker-bake-stages.mmd  slotmap_memory_layout.dot  slotmap_overview.dot  ssh-security-flow.mmd  storage-state.mmd
docs/IDE/: CLion.md  devcontainer-bake.md
docs/Policies/: GrowthPolicy.md  LookupPolicy.md  StoragePolicy.md
docs/ai_reviews/: aggregate_devcontainer_review.md  claude_devcontainer_review.md  codex_devcontainer_review.md  docker_devcontainer_mutagen_review.md  gemini_devcontainer_review.md
include/slotmap/: Concepts.hpp  Errors.hpp  Handle.hpp  Slot.hpp  SlotMap.hpp
scripts/: auto_update_tools.sh  check_devcontainer_config.sh  check_docker_bake.sh  check_hardcoded_refs.sh  check_tool_versions.sh  clean_buildx_cache.sh  cleanup_devcontainers.sh  deploy_remote_devcontainer.sh  generate_diagrams.sh  generate_docs.sh  inspect_image_sizes.sh  run_local_devcontainer.sh  setup_mutagen_host.sh  sync_gh_auth.sh  test_devcontainer_ssh.sh  update_tools_mac.sh  update_tools_remote.sh  update_tools_with_remotes.sh  verify_base_image.sh  verify_cache_volume.sh  verify_devcontainer.sh  verify_devcontainer_inventory.sh  verify_mutagen.sh
scripts/schedulers/: README.md  com.slotmap.toolupdate.plist  install_scheduler.sh  slotmap-toolupdate.service  slotmap-toolupdate.timer  sync_launchd.sh
scripts/tools/: bake_manifest_check.py
tests/: CMakeLists.txt  test_slotmap.cpp
vcpkg-overlays/bext-ut/: vcpkg.json
vcpkg-overlays/boost-decimal/: portfile.cmake  vcpkg.json
vcpkg-overlays/boost-ext/ports/boost-ext-ut/: portfile.cmake  usage  vcpkg.json
vcpkg-overlays/boost-ext/ports/boost-ut/: portfile.cmake  vcpkg.json
vcpkg-overlays/boost-int128/: portfile.cmake  vcpkg.json
vcpkg-overlays/compile-time-init-build/: portfile.cmake  vcpkg.json
vcpkg-overlays/cpp-std-extensions/: portfile.cmake  vcpkg.json
vcpkg-overlays/qlibs-perf/: portfile.cmake  vcpkg.json
vcpkg-overlays/qlibs/ports/qlibs-perf/: portfile.cmake  usage  vcpkg.json
vcpkg-overlays/qlibs/ports/qlibs-perf/files/include/qlibs/: perf
